--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../../Gitee/fullstack/part2/phonebook && npm run build --prod && cp -r build ../../../../Github/phonebook/",
     "deplay": "git push heroku master",
-    "deplay:full": "npm run build:ui && git add . && git commit -m UIbuild && npm run deploy",
+    "deplay:full": "npm run build:ui && git add . && git commit -m UIbuild && npm run deplay",
     "logs:prod": "heroku logs --tail"
   },
   "keywords": [
