--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:ui": "rm -rf build && cd ../../Gitee/fullstack/part2/phonebook && npm run build --prod && cp -r build ../../../../Github/phonebook/",
     "deplay": "git push heroku master",
     "deplay:full": "npm run build:ui && git add . && git commit -m UIbuild && npm run deplay",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "keywords": [
     "express.js"
@@ -25,6 +26,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "eslint": "^7.1.0",
+    "nodemon": "^2.0.4",
+    "standard": "^14.3.4"
   }
 }
